CA-net8: MusicStore: configuración

--- a/MusicStoreCleanArchitectureNet8/Huachin.MusicStore/src/Huachin.MusicStore.Application/Huachin.MusicStore.Application.csproj
+++ b/MusicStoreCleanArchitectureNet8/Huachin.MusicStore/src/Huachin.MusicStore.Application/Huachin.MusicStore.Application.csproj
@@ -6,4 +6,15 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Mapster" Version="7.4.0" />
+    <PackageReference Include="MediatR" Version="12.5.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.2" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Huachin.MusicStore.Domain\Huachin.MusicStore.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
