--- a/MusicStoreCleanArchitectureNet8/Huachin.MusicStore/src/Huachin.MusicStore.Infrastructure/Huachin.MusicStore.Infrastructure.csproj
+++ b/MusicStoreCleanArchitectureNet8/Huachin.MusicStore/src/Huachin.MusicStore.Infrastructure/Huachin.MusicStore.Infrastructure.csproj
@@ -6,4 +6,21 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.3.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.21" />
+    
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.21" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.21">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.21" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.11" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Huachin.MusicStore.Application\Huachin.MusicStore.Application.csproj" />
+  </ItemGroup>
+
 </Project>
